Axis now shows correct values. Bar value is now shown above the bar if th bar is too low in height.

--- a/style/style_global.less
+++ b/style/style_global.less
@@ -215,6 +215,8 @@ table
     height: 350px;
     position: relative;
     overflow: hidden;
+    margin-bottom: 0.5em;
+    background-color: black;
 }
 
 .chart-content {
@@ -231,6 +233,7 @@ table
 }
 
 .bar-chart .value {
+    position: relative;
     font-size: 0.8em;
     text-align: center;
     color: white;
@@ -275,6 +278,7 @@ code {
     border: 1px solid white;
     background-color: #040616;
     padding: 5px;
+    color: white;
 }
 
 // ****************************************************************
