--- a/themes/theme_default/style.css
+++ b/themes/theme_default/style.css
@@ -4,6 +4,3 @@
 .chart-content {
   background-image: url("chart_pattern_default.png");
 }
-.chart {
-  background-color: black;
-}
